--- a/angular/frontend/src/app/app-auth/app-auth.component.html
+++ b/angular/frontend/src/app/app-auth/app-auth.component.html
@@ -1,30 +1,47 @@
 <div class="text-center">
 @if (isloggedin) {
-  <div class="text-info-emphasis m-2">{{whoAmI}}</div>
-  <button
-    class="btn btn-primary my-1"
-    (click)="bttLogoutClicked()"
-  >LogOut</button>
-
+  <div class="row">
+    <div class="col-11"></div>
+    <div class="col-1">
+      <div class="text-info-emphasis m-2">{{whoAmI}}</div>
+      <button
+        class="btn btn-primary my-1"
+        (click)="bttLogoutClicked()"
+      >LogOut</button>
+    </div>
+  </div>
 } @else {
-  <input
-    type="text"
-    class="form-control my-1"
-    id="username"
-    placeholder="Username"
-    [(ngModel)]="username"
-  >
-  <input
-    type="password"
-    class="form-control my-1"
-    id="password"
-    placeholder="Password"
-    [(ngModel)]="password"
-  >
-  <button
-    class="btn btn-primary my-1"
-    (click)="bttLoginClicked()"
-  >LogIn</button>
-  <div class="text-danger">{{errorMsg}}</div>
+  <div class="row">
+    <div class="col-9"></div>
+    <div class="col-1">
+      <input
+        type="text"
+        class="form-control my-1"
+        id="username"
+        placeholder="Username"
+        [(ngModel)]="username"
+      >
+    </div>
+    <div class="col-1">
+      <input
+        type="password"
+        class="form-control my-1"
+        id="password"
+        placeholder="Password"
+        [(ngModel)]="password"
+      >
+    </div>
+    <div class="col-1">
+      <button
+        class="btn btn-primary my-1"
+        (click)="bttLoginClicked()"
+      >LogIn</button>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-9"></div>
+    <div class="col-3 text-danger">{{errorMsg}}</div>
+  </div>
+
 }
 </div>
