--- a/angular/frontend/src/app/app.component.html
+++ b/angular/frontend/src/app/app.component.html
@@ -1,8 +1,11 @@
-<div class="container-fluid p-1">
-  <div class="row">
-    <div class="col-9"></div>
-    <div class="col-3"><app-auth></app-auth></div>
+<div class="container-fluid">
+  <div class="row bg-primary bg-opacity-75 text-light p-1">
+    <div class="col-12 text-center">Small Ecosystem</div>
+  </div>
+  <div class="row p-2">
+    <div class="col-12"><app-auth></app-auth></div>
+  </div>
+  <div class="row p-2">
+    <div class="col-12"><app-api-client></app-api-client></div>
   </div>
 </div>
-<router-outlet></router-outlet>
-
